| Summary: | ASTERISK-27158: [patch] res_rtp_asterisk: RTCP statistics are not available when native bridge is used | ||
| Reporter: | Torrey Searle (tsearle) | Labels: | |
| Date Opened: | 2017-07-26 09:13:45 | Date Closed: | 2017-08-16 06:41:43 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | 13.17.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When native bridging occurs asterisk doesn't generate RTCP (nor forward) packets. Additionally the stastics ref jitter and packet loss are also not available for querying. This patch gets both working under native bridge. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-07-26 09:13:46.402-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2017-07-28 09:10:32.377-0500 Thanks [~tsearle]! | ||